--- a/BulkyBook.Models/BulkyBook.Models.csproj
+++ b/BulkyBook.Models/BulkyBook.Models.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="5.0.6"/>
   </ItemGroup>
 </Project>
