--- a/BulkyBook.Utility/BulkyBook.Utility.csproj
+++ b/BulkyBook.Utility/BulkyBook.Utility.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.7"/>
+    <PackageReference Include="SendGrid" Version="9.24.2"/>
   </ItemGroup>
 </Project>
