--- a/BulkyBook/BulkyBook.csproj
+++ b/BulkyBook/BulkyBook.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="5.0.9"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.9"/>
+    <PackageReference Include="Stripe.net" Version="39.63.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BulkyBook.DataAccess\BulkyBook.DataAccess.csproj"/>
