--- a/BulkyBook.Utility/BulkyBook.Utility.csproj
+++ b/BulkyBook.Utility/BulkyBook.Utility.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.7"/>
     <PackageReference Include="SendGrid" Version="9.24.2"/>
+    <PackageReference Include="Braintree" Version="5.9.0"/>
   </ItemGroup>
 </Project>
