--- a/BulkyBook/appsettings.json
+++ b/BulkyBook/appsettings.json
@@ -20,5 +20,11 @@
     "PhoneNumber": "+12562545323",
     "AuthToken": "ea8f8f754d2e3683df645332fae1f7c4",
     "AccountSid": "ACa30aa92587acf46cc33dc32d0a7af658"
+  },
+  "BrainTree": {
+    "Environment": "sandbox",
+    "MerchantId": "6ygmd6wdhr6p9mk7",
+    "PublicKey": "57p7fydk87v42vkp",
+    "PrivateKey": "ea4867c91798d74a0d6c5ad3c9cf60ab"
   }
 }
